--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div>
                     <form action="/action_page.php" method="get">
                 <button><em>Submit/Register</em></button><br>
-                <br><button class="registerbtn">Signup</button>
+                <br><button id="registerbtn">Signup</button>
                 <button class="hoverbtn">
                     <a href="signin.html">Signin</a></button>
                 </form>
