--- a/signin.html
+++ b/signin.html
@@ -13,7 +13,7 @@
         </div><br>
 
         <br><fieldset id="register">
-                <div class="page">
+                <div id="page">
                 <form action="/action_page.php" method="get"><br>
                 <br>Email:<input type="password" name="password" placeholder="Enter your email"><br>
                 <br>Password:<input type="password" name="password" placeholder="Enter your email"><br>
